src-tauri/log11.txt
    Checking launcherg v0.0.0 (E:\Launcherg-Mod\src-tauri)
error[E0432]: unresolved import `windows::Win32::Graphics::Dxgi::Common::DXGI_ERROR_WAIT_TIMEOUT`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:22:36
   |
22 |     DXGI_ALPHA_MODE_PREMULTIPLIED, DXGI_ERROR_WAIT_TIMEOUT, DXGI_FORMAT_B8G8R8A8_UNORM,
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^ no `DXGI_ERROR_WAIT_TIMEOUT` in `Windows::Win32::Graphics::Dxgi::Common`

error: cannot find macro `anyhow` in this scope
  --> src\infrastructure\windowsimpl\scaling\shader_compiler.rs:48:24
   |
48 |             return Err(anyhow!("No passes found in effect"));
   |                        ^^^^^^
   |
   = note: `anyhow` is in scope, but it is a crate, not a macro
help: consider importing this macro
   |
1  + use anyhow::anyhow;
   |

error[E0107]: enum takes 2 generic arguments but 1 generic argument was supplied
   --> src\infrastructure\windowsimpl\scaling\shader_compiler.rs:42:72
    |
42  |     pub fn compile_compute_shader_source(&self, source_path: &Path) -> Result<(String, String)> {
    |                                                                        ^^^^^^ ---------------- supplied 1 generic argument
    |                                                                        |
    |                                                                        expected 2 generic arguments
    |
note: enum defined here, with 2 generic parameters: `T`, `E`
   --> C:\Users\nnnma\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\result.rs:528:10
    |
528 | pub enum Result<T, E> {
    |          ^^^^^^ -  -
help: add missing generic argument
    |
42  |     pub fn compile_compute_shader_source(&self, source_path: &Path) -> Result<(String, String), E> {
    |                                                                                               +++

error[E0107]: enum takes 2 generic arguments but 1 generic argument was supplied
   --> src\infrastructure\windowsimpl\scaling\shader_compiler.rs:136:45
    |
136 |     fn parse_effect(&self, source: &str) -> Result<EffectDesc> {
    |                                             ^^^^^^ ---------- supplied 1 generic argument
    |                                             |
    |                                             expected 2 generic arguments
    |
note: enum defined here, with 2 generic parameters: `T`, `E`
   --> C:\Users\nnnma\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\result.rs:528:10
    |
528 | pub enum Result<T, E> {
    |          ^^^^^^ -  -
help: add missing generic argument
    |
136 |     fn parse_effect(&self, source: &str) -> Result<EffectDesc, E> {
    |                                                              +++

error[E0382]: use of moved value: `window_manager`
   --> src\infrastructure\windowsimpl\scaling\processor.rs:271:36
    |
188 |         let mut window_manager = WindowManager::new();
    |             ------------------ move occurs because `window_manager` has type `WindowManager`, which does not implement the `Copy` trait
...
255 |         self._window_manager = Some(window_manager);
    |                                     -------------- value moved here
...
271 |         let handle = thread::spawn(move || {
    |                                    ^^^^^^^ value used here after move
...
467 |             window_manager.restore_target_window();
    |             -------------- use occurs due to use in closure
    |
note: if `WindowManager` implemented `Clone`, you could clone the value
   --> src\infrastructure\windowsimpl\scaling\window.rs:12:1
    |
12  | pub struct WindowManager {
    | ^^^^^^^^^^^^^^^^^^^^^^^^ consider implementing `Clone` for this type
    |
   ::: src\infrastructure\windowsimpl\scaling\processor.rs:255:37
    |
255 |         self._window_manager = Some(window_manager);
    |                                     -------------- you could clone this value

Some errors have detailed explanations: E0107, E0382, E0432.
For more information about an error, try `rustc --explain E0107`.
error: could not compile `launcherg` (bin "launcherg") due to 5 previous errors
